?? ??? ????, PHP 8.4.0beta1

- Core:
  . Updated build system scripts config.guess to 2024-07-27 and config.sub to
    2024-05-27. (Peter Kokot)

- DOM:
  . Fixed bug GH-15192 (Segmentation fault in dom extension
    (html5_serializer)). (nielsdos)

- PHPDBG:
  . array out of bounds, stack overflow handled for segfault handler on windows.
    (David Carlier)

- Standard:
  . Unserializing the uppercase 'S' tag is now deprecated. (timwolla)

01 Aug 2024, PHP 8.4.0alpha4

- GMP:
  . RFC: Change GMP bool cast behavior. (Saki Takamachi)

01 Aug 2024, PHP 8.4.0alpha3

- Core:
  . Fix GH-14978 (The xmlreader extension phpize build). (Peter Kokot)
  . Throw Error exception when encountering recursion during comparison, rather
    than fatal error. (ilutov)
  . Added missing cstddef include for C++ builds. (cmb)
  . Fixed bug GH-15108 (Segfault when destroying generator during shutdown).
    (Arnaud)

- BCMath:
  . Adjust bcround()'s $mode parameter to only accept the RoundingMode
    enum. (timwolla, saki)

- DOM:
  . Fix trampoline leak in xpath callables. (nielsdos)
  . Throw instead of silently failing when creating a too long text node in
    (DOM)ParentNode and (DOM)ChildNode. (nielsdos)

- FPM:
  . /dev/poll events.mechanism for Solaris/Illumos setting had been retired.
    (David Carlier)

- GMP:
  . The GMP class is now final and cannot be extended anymore. (Girgias)

- Intl:
  . Added SpoofChecker::setAllowedChars to set unicode chars ranges.
    (David Carlier)
  . Fixed bug GH-15087 (IntlChar::foldCase()'s $option is not optional). (cmb)

- Opcache:
  . Fixed bug GH-13775 (Memory leak possibly related to opcache SHM placement).
    (Arnaud, nielsdos)

- OpenSSL:
  . Bumped minimum required OpenSSL version to 1.1.0. (cmb)

- PDO_FIREBIRD:
  . Added Pdo\Firebird::ATTR_API_VERSION. (SakiTakamachi)
  . Added getApiVersion() and removed from getAttribute().
    (SakiTakamachi)
  . Supported Firebird 4.0 datatypes. (sim1984)

- PGSQL: