@@ -15,6 +15,7 @@ namespace {
      */
     const MT_RAND_PHP = UNKNOWN;
 
+    #[\Deprecated(since: '8.4', message: "use \\Random\\Randomizer::getFloat() instead")]
     function lcg_value(): float {}
 
     function mt_srand(?int $seed = null, int $mode = MT_RAND_MT19937): void {}
