@@ -8,7 +8,7 @@ echo "MATHS test script started\n";
 
 echo "\n lcg_value tests...\n";
 for ($i = 0; $i < 100; $i++) {
-    $res = lcg_value();
+    $res = @lcg_value();
 
     if (!is_float($res) || $res < 0 || $res > 1) {
         break;
